--- a/src/4index.html
+++ b/src/4index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Three.js PLY Loader + FlyControls</title>
+  <title>Three.js Gaussian PLY Viewer with FlyControls & Color</title>
   <style>
     body { margin: 0; overflow: hidden; }
     canvas { display: block; }
@@ -24,47 +24,77 @@
     import { PLYLoader } from 'three/examples/jsm/loaders/PLYLoader.js';
     import { FlyControls } from 'three/examples/jsm/controls/FlyControls.js';
 
+    // Scene setup
     const scene = new THREE.Scene();
-    scene.background = new THREE.Color(0x222222);
+    scene.background = new THREE.Color(0x111111);
 
-    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.01, 1000);
     camera.position.set(0, 0, 2);
 
     const renderer = new THREE.WebGLRenderer({ antialias: true });
     renderer.setSize(window.innerWidth, window.innerHeight);
+    renderer.outputColorSpace = THREE.SRGBColorSpace;
     document.body.appendChild(renderer.domElement);
 
-    // Lights
+    // Lighting
     scene.add(new THREE.AmbientLight(0xffffff, 0.4));
-    const dirLight = new THREE.DirectionalLight(0xffffff, 0.6);
-    dirLight.position.set(5, 5, 5);
-    scene.add(dirLight);
+    const light = new THREE.DirectionalLight(0xffffff, 0.8);
+    light.position.set(5, 5, 5);
+    scene.add(light);
 
     // Controls
     const controls = new FlyControls(camera, renderer.domElement);
     controls.movementSpeed = 2;
     controls.rollSpeed = 0.5;
-    controls.dragToLook = true; // Hold mouse button to look
+    controls.dragToLook = true;
     controls.autoForward = false;
 
-    // Load PLY
+    // Load PLY and apply color from f_dc_0/1/2
     const loader = new PLYLoader();
     loader.load('point_cloud.ply', function (geometry) {
       geometry.computeVertexNormals();
-      const material = new THREE.PointsMaterial({ color: 0xAAAAAA, size: 0.01 });
-      const pointCloud = new THREE.Points(geometry, material);
-      scene.add(pointCloud);
+
+      const count = geometry.getAttribute('position').count;
+      const dc0 = geometry.getAttribute('f_dc_0');
+      const dc1 = geometry.getAttribute('f_dc_1');
+      const dc2 = geometry.getAttribute('f_dc_2');
+
+      console.log('Available attributes:', Object.keys(geometry.attributes));
+
+      if (dc0 && dc1 && dc2) {
+        const colors = new Float32Array(count * 3);
+        for (let i = 0; i < count; i++) {
+          colors[i * 3 + 0] = Math.min(Math.max(dc0.array[i], 0.0), 1.0);
+          colors[i * 3 + 1] = Math.min(Math.max(dc1.array[i], 0.0), 1.0);
+          colors[i * 3 + 2] = Math.min(Math.max(dc2.array[i], 0.0), 1.0);
+        }
+
+        geometry.setAttribute('color', new THREE.BufferAttribute(colors, 3));
+
+        const material = new THREE.PointsMaterial({
+          size: 0.01,
+          vertexColors: true
+        });
+
+        const pointCloud = new THREE.Points(geometry, material);
+        scene.add(pointCloud);
+      } else {
+        console.warn('Missing f_dc_* attributes. Using default color.');
+        const material = new THREE.PointsMaterial({ color: 0xAAAAAA, size: 0.01 });
+        const pointCloud = new THREE.Points(geometry, material);
+        scene.add(pointCloud);
+      }
     });
 
-    // Resize support
+    // Resize handler
     window.addEventListener('resize', () => {
-      camera.aspect = window.innerWidth/window.innerHeight;
+      camera.aspect = window.innerWidth / window.innerHeight;
       camera.updateProjectionMatrix();
       renderer.setSize(window.innerWidth, window.innerHeight);
     });
 
     // Animation loop
-    let clock = new THREE.Clock();
+    const clock = new THREE.Clock();
     function animate() {
       requestAnimationFrame(animate);
       controls.update(clock.getDelta());
